fix filter buttons alignment and size

--- a/frontend/src/assets/reset.css
+++ b/frontend/src/assets/reset.css
@@ -135,14 +135,18 @@
 }
 
 .filter{
-    padding-bottom: 7px;
+    padding-bottom: 8px;
 }
 
 .filter .input-group-prepend{
-    margin-right: -7px;
-    margin-left: -7px;
-    margin-top: -7px;
-    margin-bottom: -7px;
+    margin-right: -8px;
+    margin-left: -8px;
+    margin-top: -8px;
+    margin-bottom: -8px;
+}
+
+#dropdown-form-countries{
+    width: 115px;
 }
 
 .range-pages .dropdown-menu.show{
